# solana-human-protocol

./: .gitignore
cli/: Cargo.toml  README.md
cli/src/: main.rs
human-api/: Cargo.toml  README.md  Rocket.toml
human-api/src/: data.rs  factory.rs  helpers.rs  job.rs  main.rs  manifest.rs  network.rs  responses.rs
human-api/src/tests/: api_tests.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs
