[package]
name = "human-api"
version = "0.1.0"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf=[]


[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.5.14"
solana-sdk = "1.5.14"
solana-program = "1.5.14"
solana-account-decoder = "1.5.14"
serde_json = "1.0.64"
hmt-escrow = { path="../program/" }
spl-token = { version = "3.0", git = "https://github.com/solana-labs/solana-program-library", features = [ "no-entrypoint" ] }
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
sha-1 = "0.9.4"
